[gd_scene load_steps=5 format=3 uid="uid://b6qyveu25w7m5"]

[ext_resource type="Script" path="res://addons/QuickSceneRunner/QuickScene.gd" id="1_jio3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmcyq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.12549)

[sub_resource type="Gradient" id="Gradient_xcoja"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.890196, 0.52549, 0.52549, 0.3)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qyinb"]
gradient = SubResource("Gradient_xcoja")
width = 32
height = 32

[node name="PanelContainer" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_lmcyq")
script = ExtResource("1_jio3d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Path" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Scene Path"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DeleteProgress" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/Delete"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
max_value = 1.0
step = 0.0
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_qyinb")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Run" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Run Scene"

[node name="Edit" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit Scene"

[node name="Bound" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Use For Shortcut"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Path" to="." method="_on_path_text_changed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_button_down"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_button_up"]
